<resources>
    <string name="allow">Allow</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity</string>
    <string name="clouds">Clouds</string>
    <string name="visibility_text">Visibility</string>
    <string name="atmospheric_pressure">Atmospheric pressure</string>
    <string name="probability_of_precipitation">Probability of precipitation</string>
    <string name="feel_like">Feel like:"</string>
    <string name="des_good">Air quality is considered satisfactory, and air pollution poses little or no risk</string>
    <string name="des_fair">Air quality is acceptable; however, for some pollutants there may be a moderate health concern for a very small number of people who are unusually sensitive to air pollution.</string>
    <string name="des_moderate">Members of sensitive groups may experience health effects. The general public is not likely to be affected.	"</string>
    <string name="des_poor">Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects	"</string>
    <string name="des_very_poor">Health warnings of emergency conditions. The entire population is more likely to be affected.</string>
    <string name="des_hazardous">Health alert: everyone may experience more serious health effects</string>
    <string name="tit_good">Good"</string>
    <string name="tit_fair">Moderate</string>
    <string name="tit_moderate">Unhealthy for Sensitive Groups</string>
    <string name="tit_poor">Unhealthy</string>
    <string name="tit_very_poor">Very Unhealthy</string>
    <string name="tit_hazardous">Hazardous"</string>
    <string name="today">Today</string>
    <string name="hourly_forecast">Hourly forecast</string>
    <string name="weather_details">Weather details</string>
    <string name="see_more">See more</string>
    <string name="daily_forecast">Daily forecast</string>
    <string name="air_quality">Air quality</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_gust">Wind gust</string>
    <string name="wind_direction">Wind direction</string>
    <string name="wind">Wind</string>
    <string name="find_location">Find location</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="result_search">Result search</string>
    <string name="please_enter_a_city_name">Please enter a city name</string>
    <string name="widget">Widget</string>
    <string name="unknown_location">Unknown location</string>
    <string name="day">Day</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="night">Night</string>
    <string name="evening">Evening</string>
    <string name="morning">Morning</string>
    <string name="air_pollution_level_health_implications"><![CDATA[Air Pollution Level & Health Implications]]></string>
    <string name="air_quality_information">Air quality information</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate us</string>
    <string name="amount_of_rain">Amount of rain</string>
    <string name="location_permission">Location permission</string>
    <string name="your_location">Use your location</string>
    <string name="share_app">Share app</string>
    <string name="please_wait_a_minute">Please, wait a minute</string>
    <string name="follow_the_weather_with_this_app">Follow the weather with this app</string>
    <string name="later">Later</string>
    <string name="rate_app">Rate app</string>
    <string name="do_you_like_the_app">Do you like the app!!!</string>
    <string name="ad_attribution">Ad</string>
    <string name="snow">Snow</string>
    <string name="update">Updated:</string>
    <string name="weather_map">Weather map</string>
    <string name="now">Now</string>
    <string name="setting">Setting</string>
    <string name="general">General</string>
    <string name="unit">Unit</string>
    <string name="rain_probability">Rain Probability</string>
    <string name="uv_index">Max UV index</string>
    <string name="simple_widget">Simple widget</string>
    <string name="updating">Updating...</string>
    <string name="widget_created_on_home_screen_successfully">Widget created on home screen successfully</string>
    <string name="instructions_for_adding_widgets">Instructions for adding widgets</string>
    <string name="exit">Exit</string>
    <string name="continue_using">Continue using</string>
    <string name="do_you_really_want_to_exit_the_app">Do you really want to exit the app?</string>
    <string name="exit_app">Exit app?</string>
    <string name="app_name">4K Wallpaper</string>
    <string name="set_image_as_lock_screen_successfully">Set image as lock screen successfully!</string>
    <string name="set_image_as_main_screen_success">Set image as main screen successfully!</string>
    <string name="set_as_both_success">Set image as lock and main screen successfully!</string>
    <string name="enter_your_idea">Enter your idea</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="clear_histories">Clear histories</string>
    <string name="no_search_history_yet">No search history yet</string>
    <string name="suggestion_tags">Suggestion tags</string>
    <string name="you_have_not_favorited_any_photos_yet">You have not favorited any photos yet</string>
    <string name="you_have_not_used_any_photos_as_wallpaper_yet">You have not used any photos as wallpaper yet</string>
    <string name="preparing_photo_to_share">Preparing photo to share…</string>
    <string name="setting_wallpaper">Setting wallpaper…</string>
    <string name="set_image_as">Set Image as</string>
    <string name="downloading">Downloading...</string>
    <string name="download_success">Downloading successfully.\n The app has saved the image to this path: Storage/Download/EZT4KWallpaper and your Photos Gallery.</string>
    <string name="download_fail">Downloading fail, please try again late or try again with another network (wifi,3G,4G,5G)!</string>
    <string name="share_fail">Share fail, please try again late or try again with another network (wifi,3G,4G,5G)!</string>
    <string name="setting_wallpaper_fail">Set wallpaper fail, please try again late or try again with another network (wifi,3G,4G,5G)!</string>
    <string name="set_wallpaper_error">An error occurred while setting the wallpaper. You can download images and set wallpapers using your device\'s gallery app. Thank you!</string>
    <string name="ok">OK</string>
    <string name="download_cancel">Download canceled</string>
    <string name="all_categories">All categories</string>
    <string name="downloaded">Downloaded</string>
    <string name="favorite">Favorites</string>
    <string name="recent_wallpaper">Recent wallpapers</string>
    <string name="explore_all_categories_here">Explore all categories here</string>
    <string name="found_new_version">Found new version.</string>
    <string name="about_update">About update:</string>
    <string name="update_now">Update now</string>
    <string name="similar_wallpapers">Similar wallpapers</string>
    <string name="downloading_high_quality_wallpapers">Downloading high quality wallpaper…</string>
    <string name="please_wait">Please wait!</string>
    <string name="download_wallpaper_first">Please download live wallpaper first!</string>
    <string name="download">Download</string>
    <string name="live_wallpaper_downloaded">Live wallpaper Downloaded</string>
    <string name="fire_rain">Fire Rain</string>
    <string name="wallpaper_description">4K Wallpaper</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_path">Wallpaper path invalid, loading default…</string>
    <string name="default_failed">Failed to load default wallpaper! Please set manually.</string>
    <string name="gles_version">Needs to support GLESv2 or higher version!</string>
    <string name="the_photos_you_downloaded_will_be_here">The photos you downloaded will be here</string>
    <string name="your_live_wallpaper_that_you_downloaded_will_be_here">Your live wallpaper that you downloaded will be here.</string>
    <string name="set_live_wallpaper_success">Set live wallpaper successfully</string>
    <string name="please_allow_permission">Please allow permission for this feature!</string>
    <string name="live_wallpaper">Live Wallpaper</string>
    <string name="set_as_home_screen">Set as home screen</string>
    <string name="set_as_lock_screen">Set as lock screen</string>
    <string name="set_as_both">Set as both</string>
    <string name="ok_got_it">OK, got it</string>
    <string name="please_read_me">Please read me!</string>
    <string name="if_the_process_of_setting_the_live_wallpaper_in_the_application_fails_please_download_the_live_wallpaper_and_set_it_as_your_wallpaper_in_your_gallery_app_the_application_will_save_the_live_wallpaper_at_the_path_storage_download_4kwallpaper_livewallpaper_and_in_the_photos_gallery_when_you_click_download_button_thank_you">If the process of setting the live wallpaper in the application fails. Please download the live wallpaper and set it as your wallpaper in your GALLERY app. The application will save the live wallpaper at the path Storage/Download/EZT4KWallpaper and in the Photos Gallery when you click Download button. Thank you!</string>
    <string name="keyThemeDarkMode" translatable="false">keyThemeDarkMode</string>
    <string name="keyGifScaleType" translatable="false">keyGifScaleType</string>
    <string name="keyVideoAudio" translatable="false">keyVideoAudio</string>
    <string name="keyDoubleTapToPause" translatable="false">keyDoubleTapToPause</string>
    <string name="keyPlayOffscreen" translatable="false">kayPlayBackground</string>
    <string name="keyCropVideo" translatable="false">keyCropVideo</string>
    <string name="auto_wallpaper_changer">Auto Wallpaper Changer</string>
    <string name="auto_wallpaper_changer_label">Auto Wallpaper Changer (random) </string>
    <string name="select_image">Select Images</string>
    <string name="time_interval">Time interval:</string>
    <string name="download_2_image">Please download at least 2 wallpapers to be able to use this function. Thank you!</string>
    <string name="choose_2_image">Please choose at least 2 wallpapers to be able to use this function. Thank you!</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="stop_auto_change">Stopping wallpaper auto changer and setting default wallpaper…</string>
    <string name="running">Running…</string>
    <string name="note_auto_change">"This function randomly and sequentially uses the images you have downloaded as wallpaper after each interval you choose. Any changes need to press the \"Start\" button to take effect. You will need to press the \"Stop\" button first if \"Automatic wallpaper change\" is running."</string>
    <string name="you_need_to_download_at_least_2_wallpapers_to_be_able_to_use_this_function_thank_you">Please download at least 2 wallpapers to be able to use this function. Thank you!</string>
    <string name="stopped">Stopped</string>
    <string name="home">Home</string>
    <string name="title_activity_charing_animation">CharingAnimationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="brightness_10">10 %</string>
    <string name="brightness_100">100 %</string>
    <string name="brightness_50">50 %</string>
    <string name="brightness_80">80 %</string>
    <string name="brightness_auto">Auto</string>
    <string name="screen_brightness">Brightness</string>
    <string name="screen_lock">Screen Lock</string>
    <string name="screen_lock_10m">10 min</string>
    <string name="screen_lock_15s">15 sec</string>
    <string name="screen_lock_1m">1 min</string>
    <string name="screen_lock_2m">2 min</string>
</resources>