<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <com.ornach.richtext.RichView
            app:rt_backgroundColor="#3C3F41"
            app:rt_radius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:fontFamily="@font/roboto_medium"
                android:id="@+id/btnMainScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="18dp"
                android:text="@string/set_as_home_screen"
                android:textColor="@color/white" />

            <View
                android:alpha="0.7"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color" />

            <TextView
                android:fontFamily="@font/roboto_medium"
                android:id="@+id/btnLockScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="18dp"
                android:text="@string/set_as_lock_screen"
                android:textColor="@color/white" />

            <View
                android:alpha="0.7"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color" />

            <TextView
                android:fontFamily="@font/roboto_medium"
                android:id="@+id/btnBoth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="18dp"
                android:text="@string/set_as_both"
                android:textColor="@color/white" />


        </com.ornach.richtext.RichView>


    </LinearLayout>

</layout>
