<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.ornach.richtext.RichView
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            app:rt_backgroundColor="@color/c303030"
            app:rt_borderColor="#50000000"
            app:rt_radius="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/exit_app"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="300dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <include layout="@layout/data_placeholder"/>

                            <include layout="@layout/data_placeholder"/>

                            <include layout="@layout/data_placeholder"/>
                        </LinearLayout>



                    </com.facebook.shimmer.ShimmerFrameLayout>
                    <FrameLayout
                        android:id="@+id/fl_adplaceholder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:minHeight="300dp" />
                </RelativeLayout>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/do_you_really_want_to_exit_the_app"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnLate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/exit"
                    android:textColor="#CCFFFFFF"
                    android:textSize="14dp" />


                <TextView
                    android:id="@+id/tvLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/gradient_btn_rate"
                    android:fontFamily="@font/roboto_bold"
                    android:foreground="@drawable/border_100_ripple_effect"
                    android:gravity="center"
                    android:paddingTop="9dp"
                    android:paddingBottom="9dp"
                    android:text="@string/continue_using"
                    android:textColor="@color/white"
                    android:textSize="17dp" />

            </LinearLayout>
        </com.ornach.richtext.RichView>


    </RelativeLayout>
</layout>